--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Orbitron&display=swap");
+/* imported font for clock */
+
 body {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
   background-image: url("/Img/luke-chesser-pJadQetzTkI-unsplash.jpg");
 }
+
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* text-align: center; */
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  /* absolute, top, left, transform, is an easy way to adjust any content into center of the page */
 }
 
+/* button formatting */
 .btn-main {
   background-color: teal;
   color: white;
@@ -30,15 +34,18 @@ body {
   cursor: pointer;
   transform: translateY(50px);
 }
+
 .container a {
   margin: 20px;
 }
 
+/* animation on hover */
 .btn-main:hover {
   background-color: tomato;
   transform: translateY(50px) scale(1.1);
 }
 
+/* clock formatting */
 .clock-main {
   display: flex;
   flex-direction: row;
