--- a/Sign Up Page/signup.css
+++ b/Sign Up Page/signup.css
@@ -6,7 +6,7 @@ body {
     #8984c7,
     #a4b7dc,
     #be96cd
-  );
+  ); /*Adding a gradient variable to be used later*/
   --gradient1: linear-gradient(
     60deg,
     #09725f,
@@ -14,9 +14,11 @@ body {
     #70b77e,
     #e0a890,
     #f27dc3
-  );
-  --color-error: #cc3333;
+  ); /*Adding a gradient variable to be used later*/
 
+  --color-error: #cc3333; /*Adding a color file to be used later*/
+
+  /* Setting up the basic html body */
   margin: 0;
   height: 100vh;
   font-family: "Dancing Script", cursive;
@@ -43,6 +45,7 @@ a {
   text-decoration: none;
 }
 
+/*Adding styling to input fields using ids */
 #user_name,
 #email,
 #password,
@@ -58,6 +61,7 @@ a {
   transition: background 0.2s, border-color 0.2s;
 }
 
+/* Adding a focus part which happens when you click on the input field */
 #user_name:focus,
 #email:focus,
 #password:focus,
@@ -66,6 +70,7 @@ a {
   border-color: var(--color-error);
 }
 
+/* Adding Styling to Sign Up input field */
 #submitbtn {
   cursor: pointer;
   border-radius: 4px;
@@ -73,26 +78,29 @@ a {
   padding: 1rem 2rem;
   font-weight: bold;
   font-family: "Dancing Script", cursive;
-  /* font-size: 1.1rem; */
   border: none;
   outline: none;
 }
 
+/* Adding a hover part which happens when you hover on the input field */
 #submitbtn:hover {
   background: var(--color-error);
 }
-
+/* Adding a active part which happens when you click on the sign up button*/
 #submitbtn:active {
   transform: scale(0.95);
 }
 
+/* For Screens less than and equal to 425px */
 @media (max-width: 425px) {
   body {
+    /* Calling the gradient file defined above in body */
     background-image: var(--gradient);
     background-repeat: no-repeat;
   }
 
   .maincon {
+    /* Calling the gradient1 file defined above in body */
     background-image: var(--gradient1);
     background-repeat: no-repeat;
     border: 1px solid;
@@ -104,13 +112,16 @@ a {
   }
 }
 
+/* For Screens greater than 425px and less than and equal to 2560px */
 @media (min-device-width: 426px) and (max-width: 2560px) {
   body {
+    /* Calling the gradient1 file defined above in body */
     background-image: var(--gradient1);
     background-repeat: no-repeat;
   }
 
   .maincon {
+    /* Calling the gradient file defined above  in body */
     background-image: var(--gradient);
     background-repeat: no-repeat;
     border: 1px solid;
