--- a/login.css
+++ b/login.css
@@ -14,6 +14,15 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+#clock {
+  padding: 16px;
+  font-size: 50px;
+  color: white;
 }
 
 h1 {
@@ -42,7 +51,7 @@ hr {
 
 .container {
   width: 600px;
-  height: 500px;
+  height: 450px;
   /* We dont need these margins because we used flex in body 
   to center this container - @Asad */
   /* margin: 30px auto; */
