--- a/contact.css
+++ b/contact.css
@@ -1,6 +1,10 @@
 body {
   padding: 0;
   margin: 0;
+
+  background-image: url("./bgimage2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .container {
@@ -11,11 +15,27 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
+.info {
+  background-color: rgba(78, 75, 92, 0.5);
+  border-radius: 20px;
+
+  width: 480px;
+  /* height: 450px; */
+}
+
 #clock {
   padding: 10px;
   font-size: 50px;
   line-height: 1.8px;
+
+  color: #1ce2e2;
+  font-family: "Orbitron", sans-serif;
+  letter-spacing: 7px;
 }
 
 h1 {
@@ -35,7 +55,7 @@ label {
 }
 
 input {
-  width: 100%;
+  width: 90%;
   padding: 10px;
   border-radius: 4px;
 
@@ -43,10 +63,23 @@ input {
 }
 
 textarea {
-  width: 150%;
+  width: 90%;
 }
 
 .btn {
-  background-color: rgb(41, 150, 223);
+  background-color: teal;
   color: white;
+
+  display: block;
+  width: 150px;
+  margin: auto;
+  padding: 10px;
+  border-radius: 10px;
+  box-sizing: border-box;
+}
+.btn:hover {
+  background-color: tomato;
+
+  transform: translateY(-5px);
+  transition: 500ms;
 }
