--- a/Sign Up Page/signup.css
+++ b/Sign Up Page/signup.css
@@ -1,43 +1,32 @@
+@import url("https://fonts.googleapis.com/css2?family=Orbitron&display=swap");
 body {
-  /*Adding a gradient variable to be used later*/
-  --gradient: linear-gradient(
-    60deg,
-    #953773,
-    #8374ab,
-    #8984c7,
-    #a4b7dc,
-    #be96cd
-  );
-
-  /*Adding a gradient variable to be used later*/
-  --gradient1: linear-gradient(
-    60deg,
-    #09725f,
-    #25e4de,
-    #70b77e,
-    #e0a890,
-    #f27dc3
-  );
-
-  /*Adding a color file to be used later*/
-  --color-error: #cc3333;
-
-  /* Setting up the basic html body */
+  background-image: url("/Img/imgbg.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
   margin: 0;
   height: 100vh;
-  font-family: "Dancing Script", cursive;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.maincon {
+  background-color: rgba(78, 75, 92, 0.6);
+  border-radius: 20px;
+  padding: 10px;
+  text-align: center;
+  width: 400px;
+}
 
 h1 {
   font-weight: 600;
+  color: white;
 }
 
 h2 {
   font-weight: 400;
+  color: white;
 }
 
 .inputdivs,
@@ -47,10 +36,16 @@ h2 {
 
 a {
   text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
-a:hover {
-  text-decoration: underline;
+p {
+  color: rgb(228, 228, 228);
+  font-family: Arial, Helvetica, sans-serif;
+}
+p a {
+  /* color: rgb(13, 13, 185); */
+  color: #0a036d;
+  font-weight: 600;
 }
 
 /*Adding styling to input fields using ids */
@@ -66,7 +61,6 @@ a:hover {
   border: 2px solid #dddddd;
   outline: none;
   background: #eeeeeeee;
-  transition: background 0.2s, border-color 0.2s;
 }
 
 /* Adding a focus part which happens when you click on the input field */
@@ -75,106 +69,45 @@ a:hover {
 #password:focus,
 #confirm_password:focus {
   background: white;
-  border-color: var(--color-error);
 }
 
 /* Adding Styling to Sign Up input field */
 #submitbtn {
   cursor: pointer;
   border-radius: 4px;
-  width: 100%;
+  width: 50%;
+  background-color: teal;
   padding: 1rem 2rem;
   font-weight: bold;
-  font-family: "Dancing Script", cursive;
+  font-family: Arial, Helvetica, sans-serif;
   border: none;
   outline: none;
 }
 
 /* Adding a hover part which happens when you hover on the input field */
 #submitbtn:hover {
-  background: var(--color-error);
-}
-/* Adding a active part which happens when you click on the sign up button*/
-#submitbtn:active {
-  transform: scale(0.95);
+  background-color: tomato;
+  transform: translateY(2px);
+  transition: 500ms;
 }
 
-/* For Screens less than and equal to 425px */
-@media (max-width: 425px) {
-  body {
-    /* Calling the gradient file defined above in body */
-    background-image: var(--gradient);
-    background-repeat: no-repeat;
-    background-size: 410%;
-    animation: bg-animation 5s infinite;
-  }
-
-  @keyframes bg-animation {
-    0% {
-      background-position: right;
-    }
-    100% {
-      background-position: left;
-    }
-  }
-
-  .maincon {
-    /* Calling the gradient1 file defined above in body */
-    background-image: var(--gradient1);
-    background-repeat: no-repeat;
-    border: 2px solid;
-    border-color: var(--color-error);
-    border-radius: 35px;
-    text-align: center;
-    width: 360px;
-    max-width: 360px;
-    background-size: 300%;
-    background-position: left;
-    transition: background-position 1.2s;
-  }
-
-  .maincon:hover,
-  .maincon:focus {
-    background-position: right;
-  }
+/* clock formatting */
+.clock-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-top: 80px;
+  color: #1ce2e2;
+  font-size: 60px;
+  font-family: "Orbitron", sans-serif;
+  letter-spacing: 7px;
 }
-
-/* For Screens greater than 425px and less than and equal to 2560px */
-@media (min-device-width: 426px) and (max-width: 2560px) {
-  body {
-    /* Calling the gradient1 file defined above in body */
-    background-image: var(--gradient1);
-    background-repeat: no-repeat;
-    background-size: 410%;
-    animation: bg-animation 5s infinite;
-  }
-
-  @keyframes bg-animation {
-    0% {
-      background-position: right;
-    }
-    100% {
-      background-position: left;
-    }
-  }
-
-  .maincon {
-    /* Calling the gradient file defined above  in body */
-    background-image: var(--gradient);
-    background-repeat: no-repeat;
-    border: 2px solid;
-    border-color: var(--color-error);
-    border-radius: 35px;
-    text-align: center;
-    width: 360px;
-    max-width: 360px;
-    background-size: 300%;
-    background-position: left;
-    transition: background-position 1.2s;
-  }
-
-  .maincon:hover,
-  .maincon:focus {
-    background-position: right;
+@media only screen and (max-width: 1000px) {
+  .clock-main {
+    font-size: 40px;
   }
 }
