--- a/login.css
+++ b/login.css
@@ -1,111 +1,120 @@
-@import url("https://fonts.googleapis.com/css2?family=Orbitron&display=swap");
-/* imported font for clock */
-
-* {
-  padding: 0%;
-  margin: 0%;
-}
-
 /* Adding body background color - @Asad */
 body {
-  /* background-color: rgb(7, 121, 197); */
   background-image: url("./bgimage2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  margin: 0;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-
   flex-direction: column;
   flex-wrap: wrap;
-}
-
-#clock {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  color: #1ce2e2;
-  font-size: 60px;
-  font-family: "Orbitron", sans-serif;
-  letter-spacing: 7px;
-}
-
-h1 {
-  padding: 30px 35px;
-
-  text-align: center;
-  border-radius: 10px 10px 0 0;
-  font-size: 40px;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #ffffff;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: 18px;
 }
 
 .container {
-  width: 480px;
-  height: 450px;
-
-  font-family: sans-serif;
-  /* 
-  background-color: rgba(105, 3, 117, 0.5); */
+  width: 400px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   background-color: rgba(78, 75, 92, 0.5);
   border-radius: 20px;
-  /* background-image: linear-gradient(
-    60deg,
-    #09725f,
-    #25e4de,
-    #70b77e,
-    #e0a890,
-    #f27dc3
-  ); Adding a gradient variable to be used later */
-
   padding: 10px;
+  text-align: center;
+  border: 1px solid teal;
 }
 
-/* adding css to labels - @Asad*/
-label {
-  display: inline-block;
-  margin-top: 20px;
-  font-size: 20px;
-  color: #ffffff;
-}
-
-.text-inputs {
-  width: 98%;
-  height: 40px;
-
-  margin-bottom: 25px;
-  margin-top: 5px;
-  border: 2px solid #ccc;
-  color: #4f4f4f;
-  font-size: 20px;
-  border-radius: 5px;
-  display: block;
-}
-
-#submit {
-  background-color: teal;
+h1 {
   color: white;
-  padding: 10px;
-  width: 150px;
-  border-radius: 10px;
-  border-style: none;
-  box-shadow: 5px 5px 18px #242323;
-  text-decoration: none;
-  font-size: 16px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  cursor: pointer;
-  transform: translateY(50px);
-
-  margin-top: -15px;
-
-  position: relative;
-
-  left: 35%;
 }
+
+h2 {
+  color: white;
+}
+
+.main {
+  margin: 1em;
+}
+
+a {
+  text-decoration: none;
+  color: teal;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: tomato;
+}
+
+p {
+  color: white;
+}
+
+#email,
+#password {
+  display: block;
+  width: 100%;
+  padding: 0.75rem;
+  border-radius: 4px;
+  box-sizing: border-box;
+  border: 2px solid teal;
+  outline: none;
+  background: #eeeeeeee;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+
+/* Adding a focus part which happens when you click on the input field */
+#email:focus,
+#password:focus {
+  background: white;
+}
+
+/* Adding Styling to Sign Up Input field */
+#submit {
+  cursor: pointer;
+  border-radius: 4px;
+  width: 100%;
+  background-color: teal;
+  padding: 1rem 2rem;
+  font-weight: bold;
+  font-size: 1.015rem;
+  color: white;
+  border: none;
+  outline: none;
+}
+
+/* Adding a hover part which happens when you hover on Sign Up */
 #submit:hover {
   background-color: tomato;
-
-  transform: translateY(-5px);
+  transform: translateY(2px);
   transition: 500ms;
+}
+/* Adding an active part which happens when you click on Sign Up */
+#submit:active {
+  transform: scale(0.97);
+}
+
+/* Clock Formatting */
+.clock-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-top: 80px;
+  color: #00b1b1;
+  font-size: 60px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  letter-spacing: 7px;
+}
+@media only screen and (max-width: 1000px) {
+  .clock-main {
+    font-size: 40px;
+  }
 }
