--- a/Contact Page/contact.css
+++ b/Contact Page/contact.css
@@ -95,13 +95,26 @@ h1 {
   transform: translate(-50%, -50%);
   margin-top: 80px;
   color: #00b1b1;
-  font-size: 60px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   letter-spacing: 7px;
 }
-@media only screen and (max-width: 1000px) {
+@media only screen and (min-width: 375px) {
   .clock-main {
-    font-size: 40px;
+    font-size: 20px;
   }
+}
+@media only screen and (min-width: 645px) {
+  .clock-main {
+    font-size: 45px;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .clock-main {
+    font-size: 70px;
+  }
+}
+
+.clock-main:hover {
+  color: tomato;
 }
