--- a/Login Page/login.css
+++ b/Login Page/login.css
@@ -100,7 +100,8 @@ p {
 
 /* Clock Formatting */
 .clock-main {
-  /* margin-top: 80px; */
+  margin-top: -200px;
+  padding-bottom: 150px;
   color: teal;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
