Added Password Validation Fix on SignUp Page

--- a/Login Page/login.css
+++ b/Login Page/login.css
@@ -11,7 +11,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   flex-wrap: wrap;
 }
 
@@ -101,7 +100,14 @@ p {
 
 /* Clock Formatting */
 .clock-main {
-  margin-top: -200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-top: 75px;
   color: teal;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
