--- a/Landing Page/landingpage.css
+++ b/Landing Page/landingpage.css
@@ -58,7 +58,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   margin-top: 100px;
-  color: teal;
+  color: black;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   letter-spacing: 7px;
