--- a/Login Page/login.css
+++ b/Login Page/login.css
@@ -109,7 +109,7 @@ p {
   left: 50%;
   transform: translate(-50%, -50%);
   margin-top: 75px;
-  color: teal;
+  color: black;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   letter-spacing: 7px;
